--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
+    "react-p5-wrapper": "^2.0.0",
     "react-rotating-text": "^1.4.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
