--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@anzerr/http.server": "^1.0.14",
     "@babel/runtime": "^7.7.7",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "aos": "^2.3.4",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
@@ -24,11 +26,12 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
+    "react-onclickout": "^2.0.8",
     "react-p5-wrapper": "^2.0.0",
     "react-rotating-text": "^1.4.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "react-scroll": "^1.7.15",
     "react-scroll-to": "^3.0.0-beta.3",
     "react-social-icons": "^4.1.0",
