--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "feather-icons": "^4.28.0",
     "http-server": "^0.12.0",
     "jquery": "^3.4.1",
     "mdbreact": "^4.24.0",
