--- a/package.json
+++ b/package.json
@@ -1,86 +1,32 @@
 {
   "name": "lukaweb",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@anzerr/http.server": "^1.0.14",
-    "@babel/runtime": "^7.7.7",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "aos": "^2.3.4",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.4.1",
-    "cookie-parser": "^1.4.4",
-    "express": "^4.17.1",
-    "feather-icons": "^4.28.0",
-    "http-server": "^0.12.0",
-    "jquery": "^3.4.1",
-    "mdbreact": "^4.24.0",
-    "pg": "^7.17.0",
-    "react": "^16.12.0",
-    "react-awesome-button": "^6.4.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-fontawesome": "^1.7.1",
-    "react-onclickout": "^2.0.8",
-    "react-p5-wrapper": "^2.0.0",
-    "react-rotating-text": "^1.4.1",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-scroll": "^1.7.15",
-    "react-scroll-to": "^3.0.0-beta.3",
-    "react-social-icons": "^4.1.0",
-    "sass": "^1.24.0",
-    "serve": "^11.2.0",
-    "simplehttpserver": "^0.3.0",
-    "styled-components": "^4.4.1",
-    "styled-icons": "^9.1.0",
-    "typed.js": "^2.0.11"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon server",
-    "lite-server": "lite-server"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "",
-  "main": "index.js",
   "devDependencies": {
-    "concurrently": "^5.0.2",
-    "lite-server": "^2.5.4",
-    "nodemon": "^2.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lukamircetic/lukaweb.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lukamircetic/lukaweb/issues"
-  },
-  "homepage": "."
+    "@eslint/js": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.1"
+  }
 }
